T-12118 kiwifruit: Fixed issue where there was a horizontal scrollbar on the grader report screen
Reviewed-on: https://review.totaralms.com/4772
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/kiwifruit/style/core.css
+++ b/theme/kiwifruit/style/core.css
@@ -154,6 +154,9 @@ tr.r0 {
 tr.r1 {
    background:#f7f7f7;
 }
+.pagelayout-report #page-content {
+    overflow: hidden;
+}
 .generalbox,
 .totarabox,
 .admin .generalbox,
